[metadata]
name = suntimes
version = 0.0.1
author = Stephen Schleising
author_email = stephen@schleising.net
description = Package to print the sunset time on a given day
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schleising/suntimes
project_urls =
    Bug Tracker = https://github.com/schleising/suntimes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[project]
name = suntimes
version = 0.0.1

[options]
packages = suntimes
install_requires =
    astral==2.2
    dateparser==1.1.0
    python-dateutil==2.8.2
    pytz==2021.3
    pytz-deprecation-shim==0.1.0.post0
    regex==2022.1.18
    six==1.16.0
    tzdata==2021.5
    tzlocal==4.1

[options.entry_points]
console_scripts =
    sunset = suntimes.suntimes:main
